Feat: Adicionando Spring Security e configuracao

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,7 @@ spring:
         jdbc:
           lob:
             non-contextual-creation: true
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my-secret-key}
